// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no-trailing-comma-after-rest.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
type ValidateArgs = [
	{
		[key: string]: any;
	},
	string,
	string,
	...string[],
];

=====================================output=====================================
type ValidateArgs = [
  {
    [key: string]: any;
  },
  string,
  string,
  ...string[]
];

================================================================================
`;

exports[`no-trailing-comma-after-rest.ts 2`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
type ValidateArgs = [
	{
		[key: string]: any;
	},
	string,
	string,
	...string[],
];

=====================================output=====================================
type ValidateArgs = [
  {
    [key: string]: any;
  },
  string,
  string,
  ...string[]
];

================================================================================
`;

exports[`no-trailing-comma-after-rest.ts 3`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
type ValidateArgs = [
	{
		[key: string]: any;
	},
	string,
	string,
	...string[],
];

=====================================output=====================================
type ValidateArgs = [
  {
    [key: string]: any;
  },
  string,
  string,
  ...string[]
];

================================================================================
`;

exports[`trailing-comma.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string,
      to: string,
    }, // <== this one
  ];
  shop: string;
  distance: number;
}

=====================================output=====================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string;
      to: string;
    } // <== this one
  ];
  shop: string;
  distance: number;
}

================================================================================
`;

exports[`trailing-comma.ts 2`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string,
      to: string,
    }, // <== this one
  ];
  shop: string;
  distance: number;
}

=====================================output=====================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string;
      to: string;
    } // <== this one
  ];
  shop: string;
  distance: number;
}

================================================================================
`;

exports[`trailing-comma.ts 3`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string,
      to: string,
    }, // <== this one
  ];
  shop: string;
  distance: number;
}

=====================================output=====================================
export interface ShopQueryResult {
  chic: boolean;
  location: number[];
  menus: Menu[];
  openingDays: number[];
  closingDays: [
    {
      from: string;
      to: string;
    }, // <== this one
  ];
  shop: string;
  distance: number;
}

================================================================================
`;

exports[`tuple.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

export type SCMRawResource = [
	number /*handle*/,
	string /*resourceUri*/,
	modes.Command /*command*/,
	string[] /*icons: light, dark*/,
	boolean /*strike through*/,
	boolean /*faded*/
];

=====================================output=====================================
export type SCMRawResource = [
  number /*handle*/,
  string /*resourceUri*/,
  modes.Command /*command*/,
  string[] /*icons: light, dark*/,
  boolean /*strike through*/,
  boolean /*faded*/
];

================================================================================
`;

exports[`tuple.ts 2`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================

export type SCMRawResource = [
	number /*handle*/,
	string /*resourceUri*/,
	modes.Command /*command*/,
	string[] /*icons: light, dark*/,
	boolean /*strike through*/,
	boolean /*faded*/
];

=====================================output=====================================
export type SCMRawResource = [
  number /*handle*/,
  string /*resourceUri*/,
  modes.Command /*command*/,
  string[] /*icons: light, dark*/,
  boolean /*strike through*/,
  boolean /*faded*/
];

================================================================================
`;

exports[`tuple.ts 3`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================

export type SCMRawResource = [
	number /*handle*/,
	string /*resourceUri*/,
	modes.Command /*command*/,
	string[] /*icons: light, dark*/,
	boolean /*strike through*/,
	boolean /*faded*/
];

=====================================output=====================================
export type SCMRawResource = [
  number /*handle*/,
  string /*resourceUri*/,
  modes.Command /*command*/,
  string[] /*icons: light, dark*/,
  boolean /*strike through*/,
  boolean /*faded*/,
];

================================================================================
`;
